# Word-Frequency-Report-API

./: .gitignore  README.md  pyproject.toml
src/app/: main.py
src/app/api/endpoints/: report.py
src/app/services/: excel.py  export.py  lemmatizer.py
src/scripts/: generate_test_file.py
tests/: conftest.py  test_api.py  test_export.py  test_lemmatizer.py
