[project]
name = "test-kaspersky"
version = "0.1.0"
description = "FastAPI сервис для анализа частотности словоформ в больших текстах с экспортом в excel"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "openpyxl>=3.1.5",
    "pymorphy3>=2.0.6",
    "python-multipart>=0.0.22",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
